add abcd to first div

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 	<body>
         <ul>
-        	<li id="div1"></li>
+        	<li id="div1">abcd</li>
             <li>zhangsan</li>
         </ul>
 	<body>
