--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 	<body>
         <ul>
         	<li id="div1">abcd</li>
+            <div>this is a div</div>
             <li>zhangsan</li>
         </ul>
 	<body>
