--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <ul>
         	<li id="div1">abcd</li>
             <div>this is a div</div>
-            <li>zhangsan</li>
+            <li style="color:#999">zhangsan</li>
         </ul>
 	<body>
 </html>
